--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ appdirs==1.4.4
 astroid==2.4.2
 atomicwrites==1.4.0
 attrs==19.3.0
-Babel==2.8.0
+Babel>=2.9.1
 cachelib==0.1.1
 certifi==2020.6.20
 chardet==3.0.4
@@ -12,7 +12,7 @@ distlib==0.3.1
 filelock==3.0.12
 Flask==1.1.2
 Flask-Babel==1.0.0
-Flask-Cors==3.0.8
+Flask-Cors>=3.0.9
 Flask-Session==0.3.2
 Flask-SocketIO==4.3.1
 gunicorn==20.0.4
@@ -21,14 +21,14 @@ importlib-metadata==1.7.0
 iniconfig==1.0.1
 isort==4.3.21
 itsdangerous==1.1.0
-Jinja2==2.11.2
+jinja2>=2.11.3
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
 more-itertools==8.4.0
 packaging==20.4
 pluggy==0.13.1
-py==1.9.0
+py>=1.10.0
 pybabel==0.0.0.dev0
 pylint==2.5.3
 pyparsing==2.4.7
@@ -41,7 +41,7 @@ selenium==3.141.0
 six==1.15.0
 toml==0.10.1
 typed-ast==1.4.1
-urllib3==1.25.10
+urllib3>=1.26.5
 virtualenv==20.0.28
 Werkzeug==1.0.1
 wrapt==1.12.1
